--- a/references.bib
+++ b/references.bib
@@ -2,12 +2,53 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nick Tustison at 2014-06-16 08:36:00 -0400 
+%% Created for Nick Tustison at 2014-07-14 11:07:47 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{dibella2012,
+	Abstract = {The A2(A) receptor agonist, regadenoson, is increasingly used as a vasodilator during nuclear myocardial perfusion imaging. Regadenoson is administered as a single, fixed dose. Given the frequency of obesity in patients with symptoms of heart disease, it is important to know whether the fixed dose of regadenoson produces maximal coronary hyperemia in subjects of widely varying body size. Thirty subjects (12 female, 18 male, mean BMI 30.3 $\pm$ 6.5, range 19.6-46.6) were imaged on a 3T magnetic resonance scanner. Imaging with a saturation recovery radial turboFLASH sequence was done first at rest, then during adenosine infusion (140 μg/kg/min) and 30 min later with regadenoson (0.4 mg/5 ml bolus). A 5 cc/s injection of Gd-BOPTA was used for each perfusion sequence, with doses of 0.02, 0.03 and 0.03 mmol/kg, respectively. Analysis of the upslope of myocardial time-intensity curves and quantitative processing to obtain myocardial perfusion reserve (MPR) values were performed for each vasodilator. The tissue upslopes for adenosine and regadenoson matched closely (y = 1.1x + 0.03, r = 0.9). Mean MPR was 2.3 $\pm$ 0.6 for adenosine and 2.4 $\pm$ 0.9 for regadenoson (p = 0.14). There was good agreement between MPR measured with adenosine and regadenoson (y = 1.1x - 0.06, r = 0.7). The MPR values measured with both agents tended to be lower as BMI increased. There were no complications during administration of either agent. Regadenoson produced fewer side effects. Fixed dose regadenoson and weight adjusted adenosine produce similar measures of MPR in patients with a wide range of body sizes. Regadenoson is a potentially useful vasodilator for stress MRI studies.},
+	Author = {DiBella, Edward V R and Fluckiger, Jacob U and Chen, Liyong and Kim, Tae Ho and Pack, Nathan A and Matthews, Brian and Adluru, Ganesh and Priester, Tiffany and Kuppahally, Suman and Jiji, Ronny and McGann, Chris and Litwin, Sheldon E},
+	Date-Added = {2014-07-14 18:07:32 +0000},
+	Date-Modified = {2014-07-14 18:07:47 +0000},
+	Doi = {10.1007/s10554-011-9949-4},
+	Journal = {Int J Cardiovasc Imaging},
+	Journal-Full = {The international journal of cardiovascular imaging},
+	Mesh = {Adenosine; Adenosine A2 Receptor Antagonists; Adult; Body Mass Index; Contrast Media; Coronary Circulation; Drug Dosage Calculations; Female; Humans; Hyperemia; Infusions, Intravenous; Injections, Intravenous; Magnetic Resonance Imaging, Cine; Male; Meglumine; Middle Aged; Myocardial Perfusion Imaging; Obesity; Organometallic Compounds; Predictive Value of Tests; Purines; Pyrazoles; Time Factors; Utah; Vasodilator Agents},
+	Month = {Aug},
+	Number = {6},
+	Pages = {1435-44},
+	Pmc = {PMC3463785},
+	Pmid = {21968545},
+	Pst = {ppublish},
+	Title = {The effect of obesity on regadenoson-induced myocardial hyperemia: a quantitative magnetic resonance imaging study},
+	Volume = {28},
+	Year = {2012},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s10554-011-9949-4}}
+
+@article{dupuis1998,
+	Author = {P. Dupuis and U. Grenander},
+	Date-Added = {2014-07-14 16:30:30 +0000},
+	Date-Modified = {2014-07-14 16:31:34 +0000},
+	Journal = {Q. Appl. Math.},
+	Pages = {587-600},
+	Title = {Variational problems on flows of diffeomorphisms for image matching},
+	Volume = {LVI},
+	Year = {1998}}
+
+@article{beg2005,
+	Author = {M. Faisal Beg and Michael I. Miller and Alain Trouve and Laurent Younes},
+	Date-Added = {2014-07-14 16:17:58 +0000},
+	Date-Modified = {2014-07-14 16:20:04 +0000},
+	Journal = {International Journal of Computer Vision},
+	Number = {2},
+	Pages = {139-157},
+	Title = {Computing Large Deformation Metric Mappings via Geodesic Flows of Diffeomorphisms},
+	Volume = {61},
+	Year = {2005}}
 
 @article{pack2010,
 	Abstract = {Dynamic contrast-enhanced MRI has been used to quantify myocardial perfusion in recent years. Published results have varied widely, possibly depending on the method used to analyze the dynamic perfusion data. Here, four quantitative analysis methods (two-compartment modeling, Fermi function modeling, model-independent analysis, and Patlak plot analysis) were implemented and compared for quantifying myocardial perfusion. Dynamic contrast-enhanced MRI data were acquired in 20 human subjects at rest with low-dose (0.019 +/- 0.005 mmol/kg) bolus injections of gadolinium. Fourteen of these subjects were also imaged at adenosine stress (0.021 +/- 0.005 mmol/kg). Aggregate rest perfusion estimates were not significantly different between all four analysis methods. At stress, perfusion estimates were not significantly different between two-compartment modeling, model-independent analysis, and Patlak plot analysis. Stress estimates from the Fermi model were significantly higher (approximately 20%) than the other three methods. Myocardial perfusion reserve values were not significantly different between all four methods. Model-independent analysis resulted in the lowest model curve-fit errors. When more than just the first pass of data was analyzed, perfusion estimates from two-compartment modeling and model-independent analysis did not change significantly, unlike results from Fermi function modeling.},
