--- a/references.bib
+++ b/references.bib
@@ -2,12 +2,38 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Nick Tustison at 2014-07-14 11:07:47 -0700 
+%% Created for Nick Tustison at 2014-08-13 21:03:31 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{tustison2006,
+	Acmid = {2123561},
+	Address = {Berlin, Heidelberg},
+	Author = {Tustison, Nicholas J. and Gee, James C.},
+	Booktitle = {Proceedings of the Third international conference on Medical Imaging and Augmented Reality},
+	Date-Added = {2014-08-14 04:03:27 +0000},
+	Date-Modified = {2014-08-14 04:03:27 +0000},
+	Isbn = {3-540-37220-2, 978-3-540-37220-2},
+	Location = {Shanghai, China},
+	Numpages = {8},
+	Pages = {76--83},
+	Publisher = {Springer-Verlag},
+	Series = {Miar'06},
+	Title = {Generalized $n$-D ${C}^k$ {B}-spline scattered data approximation with confidence values},
+	Url = {http://dx.doi.org/10.1007/11812715_10},
+	Year = {2006},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/11812715_10}}
+
+@url{stacom2014,
+	Author = {E. DiBella and A. Young and N. Noorman and A. Suinesiaputra},
+	Date-Added = {2014-08-12 22:54:54 +0000},
+	Date-Modified = {2014-08-12 22:56:53 +0000},
+	Lastchecked = {August 12, 2014},
+	Title = {Motion Correction Challenge --- Data},
+	Urldate = {http://www.cardiacatlas.org/web/stacom2014/moco-data}}
 
 @article{dibella2012,
 	Abstract = {The A2(A) receptor agonist, regadenoson, is increasingly used as a vasodilator during nuclear myocardial perfusion imaging. Regadenoson is administered as a single, fixed dose. Given the frequency of obesity in patients with symptoms of heart disease, it is important to know whether the fixed dose of regadenoson produces maximal coronary hyperemia in subjects of widely varying body size. Thirty subjects (12 female, 18 male, mean BMI 30.3 $\pm$ 6.5, range 19.6-46.6) were imaged on a 3T magnetic resonance scanner. Imaging with a saturation recovery radial turboFLASH sequence was done first at rest, then during adenosine infusion (140 μg/kg/min) and 30 min later with regadenoson (0.4 mg/5 ml bolus). A 5 cc/s injection of Gd-BOPTA was used for each perfusion sequence, with doses of 0.02, 0.03 and 0.03 mmol/kg, respectively. Analysis of the upslope of myocardial time-intensity curves and quantitative processing to obtain myocardial perfusion reserve (MPR) values were performed for each vasodilator. The tissue upslopes for adenosine and regadenoson matched closely (y = 1.1x + 0.03, r = 0.9). Mean MPR was 2.3 $\pm$ 0.6 for adenosine and 2.4 $\pm$ 0.9 for regadenoson (p = 0.14). There was good agreement between MPR measured with adenosine and regadenoson (y = 1.1x - 0.06, r = 0.7). The MPR values measured with both agents tended to be lower as BMI increased. There were no complications during administration of either agent. Regadenoson produced fewer side effects. Fixed dose regadenoson and weight adjusted adenosine produce similar measures of MPR in patients with a wide range of body sizes. Regadenoson is a potentially useful vasodilator for stress MRI studies.},
